[gd_scene load_steps=10 format=2]

[ext_resource path="res://model/maquette/xbot/Xbot.glb" type="PackedScene" id=1]
[ext_resource path="res://model/bg/curvedPanelBG.obj" type="ArrayMesh" id=2]
[ext_resource path="res://icon/menuResminimize32.png" type="Texture" id=3]
[ext_resource path="res://script/maquette.gd" type="Script" id=4]
[ext_resource path="res://icon/ico_maquette64Shadow.png" type="Texture" id=5]
[ext_resource path="res://scene/menumain.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.223529, 0.0352941, 0.0745098, 1 )
metallic = 0.77
metallic_specular = 0.64
roughness = 0.47

[sub_resource type="Environment" id=2]
background_mode = 1
background_color = Color( 0.172549, 0.172549, 0.172549, 1 )
ss_reflections_enabled = true
ssao_enabled = true
glow_enabled = true
glow_bloom = 0.15

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.458824, 0.627451, 0.827451, 1 )

[node name="Maquette" type="Spatial"]
script = ExtResource( 4 )

[node name="Xbot" parent="." instance=ExtResource( 1 )]

[node name="Beta_Surface" parent="Xbot/Armature/Skeleton" index="1"]
material_override = SubResource( 1 )

[node name="cambase" type="Spatial" parent="."]

[node name="camerMain" type="Camera" parent="cambase"]
transform = Transform( 0.999989, 0, 0.00476473, 0, 1, 0, -0.00476473, 0, 0.999989, -0.0245972, 0.912659, 5.55519 )
current = true
fov = 25.1

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.925762, 0.0436104, 0.375583, -0.0775367, 0.994112, 0.0756876, -0.370071, -0.0991902, 0.923693, 0, 0, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.763734, 1.16136, -0.391986 )

[node name="curvedPanelBG" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -1.95748, -2.42934, -7.62927 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 3 )

[node name="SidebaPpopUpButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 48.0
margin_right = 84.0
margin_bottom = 118.0
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
margin_left = 54.0
margin_top = 50.0
margin_right = 279.0
margin_bottom = 465.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 221.0
margin_bottom = 411.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walk" type="ToolButton" parent="PopupPanel/GridContainer"]
margin_right = 110.0
margin_bottom = 72.0
text = "Walk"
icon = ExtResource( 5 )

[node name="Run" type="ToolButton" parent="PopupPanel/GridContainer"]
margin_left = 114.0
margin_right = 217.0
margin_bottom = 72.0
text = "Run"
icon = ExtResource( 5 )

[node name="menuPanel" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="SidebaPpopUpButton" to="." method="_on_SidebaPpopUpButton_pressed"]
[connection signal="pressed" from="PopupPanel/GridContainer/Walk" to="." method="_on_Walk_pressed"]
[connection signal="pressed" from="PopupPanel/GridContainer/Run" to="." method="_on_Run_pressed"]

[editable path="Xbot"]
